# crewAI

./: nsfw_gemini_test_report_20250529_100243.json
testroleplay/: .gitignore  NSFW_TEST_README.md  PROJECT_SUMMARY.md  README.md  USAGE.md  pyproject.toml  report.md  requirements.txt  roleplay_demo.py  simple_demo.py  test_nsfw_gemini_integration.py  test_nsfw_quick.py  test_system.py
testroleplay/docs/: NSFW向3种prompt对比.md  NSFW向prompt_1.md  NSFW向prompt_2.md  NSFW向prompt_3.md  NSFW指令策略分析.md  某个可参考的剧情设定.txt  用户与AI两种角色的目标关系说明.md  设计要求.txt  需求说明.txt
testroleplay/src/testroleplay/: __init__.py  agents.py  agents_nsfw.py  cli.py  controller.py  crew.py  llm_config.py  main.py  models.py
