[project]
name = "testroleplay"
version = "0.1.0"
description = "TestRoleplay using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.0,<1.0.0"
]

[project.scripts]
testroleplay = "testroleplay.main:run"
run_crew = "testroleplay.main:run"
train = "testroleplay.main:train"
replay = "testroleplay.main:replay"
test = "testroleplay.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
